Fix alignment on nonsenz

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -557,7 +557,7 @@ body {
 }
 
 .nonsenz {
-  img {
+  main img {
     margin-bottom: 1rem;
     display: block;
   }
